# lookbook

./: README.md  pyproject.toml  server.json
docs/: eval-quality.md  router-v5.md
evals/patterns/: README.md  judgments.schema.json
evals/reports/router-v4/: routing-eval.html  routing-eval.json
evals/reports/router-v5/: routing-eval.html  routing-eval.json
evals/router/: judgments.jsonl
gallery/: catalog.json  index.html
goldensets/website/ashvault_dungeon_tactics_v1/: principles.md
goldensets/website/ashvault_dungeon_tactics_v1/source_snapshot/: index.html
goldensets/website/aurelia_medspa_editorial_v1/source_snapshot/: index.html
goldensets/website/clear_ridge_water_works_field_blue_v1/: manifest.json
goldensets/website/clear_ridge_water_works_field_blue_v1/integration/: shared-atoms-candidates.md  suggested-routing-rules.json  support-donor-notes.md
goldensets/website/clear_ridge_water_works_field_blue_v1/qa/: browser-proof.json  visual-qa-report.md
goldensets/website/clear_ridge_water_works_field_blue_v1/source_snapshot/: index.html
goldensets/website/copperbeam_flooring_light_residential_v1/source_snapshot/: index.html
goldensets/website/developer_docs_quickstart_dark_v1/source_snapshot/: index.html
goldensets/website/freezebreeze_live_lab_ice_blue_v1/: manifest.json.retired-from-router-20260709
goldensets/website/freezebreeze_live_lab_ice_blue_v1/integration/: suggested-routing-rules.json
goldensets/website/freezebreeze_live_lab_ice_blue_v1/source_snapshot/: index.html  script.js  styles.css
goldensets/website/holland_dirt_black_yellow_v1/: manifest.json  principles.md  prompt.md
goldensets/website/holland_dirt_black_yellow_v1/integration/: shared-atoms-candidates.md  suggested-routing-rules.json  support-donor-notes.md
goldensets/website/holland_dirt_black_yellow_v1/qa/: browser-proof.json  visual-qa-report.md
goldensets/website/holland_dirt_black_yellow_v1/source_snapshot/: app_globals.css  app_page.tsx  index.html  styles.css
goldensets/website/instrument_studio_minimal_interactive_v1/source_snapshot/: index.html
goldensets/website/iron_circuit_fight_academy_black_copper_v1/: principles.md
goldensets/website/neon_apex_arcade_racer_v1/: anti_copy.md  manifest.json  prompt.md
goldensets/website/oakline_cabinetry_craftsmanship_v1/: manifest.json  prompt.md
goldensets/website/orbital_launch_manifest_dark_editorial_v1/: manifest.json  principles.md  prompt.md
goldensets/website/reference_product_black_spec_v1/: anti_copy.md  manifest.json
goldensets/website/signalstack_saas_analytics_ink_v1/: manifest.json  prompt.md
goldensets/website/velvet_fig_beauty_editorial_v1/: manifest.json  principles.md  prompt.md
src/design_router_mcp/: __init__.py  arena.py  atom_selector.py  cli.py  design_router_gpt55_mcp_server.py  embedding_index.py  hybrid_retrieval.py  knowledge_router.py  knowledge_router.py.bak-2026-07-05-pre-rescue  knowledge_router.py.bak-2026-07-05-pre-serving  knowledge_router.py.bak-opus-2026-07-05  knowledge_router.py.bak-smart-2026-07-04  knowledge_router.py.bak-usermsg-2026-07-04  knowledge_router.py.bak-wave-a-2026-07-04  lazy_loader.py  local_reranker.py  mcp_server.py  mcp_server.py.bak-opus-2026-07-05  mcp_server.py.bak-usermsg-2026-07-04  normalizer.py  renderer.py  renderer.py.bak-multipattern-20260709  router.py  router.py.bak-multipattern-20260709  routing_eval.py  rules.py  sanitizer.py  schemas.py  service.py  validation.py  visual_features.py  visual_index.py
src/design_router_mcp/assets/: arena_browser_scan.mjs
src/design_router_mcp/defaults/: routing_rules.default.json  routing_rules.default.json.bak-2026-07-08-pre-auto-detailing
tests/: test_frontier_pattern_bank.py  test_golden_build_arena.py  test_knowledge_router.py  test_knowledge_router.py.bak-opus-2026-07-05  test_knowledge_router.py.bak-wave-a-2026-07-04  test_knowledge_router_skills.py  test_knowledge_router_skills.py.bak-opus-2026-07-05  test_knowledge_router_skills.py.bak-rebaseline-20260704  test_knowledge_router_skills.py.bak-wave-a-2026-07-04  test_optional_pattern_shelf.py  test_packet_source_quality.py  test_pattern_judgment_schema.py  test_router_upgrades_20260709.py  test_router_v3.py  test_router_v4_intelligence.py  test_router_v5.py  test_routing_intelligence.py
tests/fixtures/: router_v3_briefs.json  router_v4_adversarial.json
(+210 files in other folders)
