[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lookbook-mcp"
version = "0.2.1"
description = "Lookbook — MCP server and packet compiler that routes frontend briefs through a curated design library."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "FoldOps", email = "opensource@foldops.dev" },
]
keywords = [
  "lookbook",
  "mcp",
  "mcp-server",
  "model-context-protocol",
  "design-router",
  "packet",
  "ai-agents",
  "coding-agents",
  "llm",
  "local-llm",
  "local-ai",
  "frontend",
  "frontend-development",
  "ui",
  "ui-design",
  "ui-generation",
  "web-design",
  "design-system",
  "code-generation",
  "generative-ai",
  "python",
  "opencode",
]
dependencies = [
  "pydantic>=2.8,<3",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = { Homepage = "https://github.com/alexalexalex222/lookbook", Documentation = "https://github.com/alexalexalex222/lookbook#readme", Repository = "https://github.com/alexalexalex222/lookbook", Issues = "https://github.com/alexalexalex222/lookbook/issues" }

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.8.0",
]
mcp = [
  "mcp>=1.1.0",
]

[project.scripts]
lookbook = "design_router_mcp.cli:main"
lookbook-mcp = "design_router_mcp.mcp_server:main"
"design-router-gpt-5.5-packet" = "design_router_mcp.cli:main"
"design-router-gpt-5.5-mcp" = "design_router_mcp.mcp_server:main"
design-router-packet = "design_router_mcp.cli:main"
design-router-mcp = "design_router_mcp.mcp_server:main"
design-router-mcp-stdio = "design_router_mcp.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
design_router_mcp = ["assets/*.mjs", "defaults/*.json", "goldensets/**/*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
